--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  index: MyString
+  name: MyString
+  code: MyString
   description: MyString
 
 two:
-  index: MyString
+  name: MyString
+  code: MyString
   description: MyString
